# treehacks-2024

./: .gitignore  README.md  api_models.py  package-lock.json  package.json  pyproject.toml  test.tex
backend/: .gitignore  api_models.py  main.py  pyproject.toml  search.py
backend/render_dir/: 09r4nduO.out  ODlLJOth.tex  gaEmUEpH.aux
backend/sql/: database.py  models.py
client/: package-lock.json  package.json  vite.config.ts
client/src/: App.tsx  Docs.tsx  main.tsx
client/src/app/: page.tsx
client/src/assets/: commands.json  data.js
client/src/components/: Box.tsx  Docs.tsx  NavBar.tsx  ScrollBaby.tsx  customToolTip.tsx  defaultText.tsx  imguploadbutton.tsx  mode-toggle.tsx  monaco-editor.tsx  monacoEditor.tsx  navbar.tsx  pdf.tsx  theme-provider.tsx
client/src/lib/latex/: latex.ts  setup.ts
client/src/lib/service/: AutocompleteService.ts
sql/: database.py
src/components/: mode-toggle.tsx  monacoEditor.tsx
