[tool.poetry]
name = "treehacks-2024"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.109.2"
python-dotenv = "^1.0.1"
firebase-admin = "^6.4.0"
pyrebase4 = "^4.7.1"
sqlalchemy = "^2.0.27"
psycopg2-binary = "^2.9.9"
uvicorn = "^0.27.1"
setuptools = "^69.1.0"
python-multipart = "^0.0.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
